--- a/myclouds-admin-web/src/main/resources/static/css/myclouds.css
+++ b/myclouds-admin-web/src/main/resources/static/css/myclouds.css
@@ -19,3 +19,27 @@ em.error{
 	color: #E63F24;
 	font-style:normal;
 }
+
+/* 控制表格在某些时候的尺寸自适应问题 */
+table.my{
+	width:100% !important;
+}
+
+/* begin:控制Model和Bootbox组件居中 */
+.modal {
+  text-align: center;
+  padding: 0!important;
+}
+.modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+/* end:控制Modal和Bootbox组件居中 */
