no commit message

--- a/myclouds-admin-web/src/main/resources/static/theme/assets/admin-tools/admin-forms/css/admin-forms.css
+++ b/myclouds-admin-web/src/main/resources/static/theme/assets/admin-tools/admin-forms/css/admin-forms.css
@@ -514,8 +514,8 @@
   height: 25px;
   width: 58px;
   color: #fff;
-  font-size: 10px;
-  font-weight: bold;
+  font-size: 13px;
+  /* font-weight: bold; */
   line-height: 20px;
   text-align: center;
   background: #D7D7D7;
