no commit message

--- a/myclouds-admin-web/src/main/resources/templates/fragments/aside.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/aside.html
@@ -32,12 +32,12 @@
 				</a>
 				<ul class="nav sub-nav">
 					<li>
-						<a href="param/init">
+						<a href="/param/init">
 							<span class="glyphicon glyphicon-book"></span> 键值参数管理
 						</a>
 					</li>
 					<li>
-						<a href="admin/enum/init">
+						<a href="/enums/init">
 							<span class="glyphicon glyphicon-modal-window"></span> 枚举类型管理
 						</a>
 					</li>
