--- a/myclouds-admin-web/src/main/resources/templates/modules/enums.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/enums.html
@@ -5,7 +5,7 @@
 <th:block th:replace="/fragments/head" />
 </head>
 
-<body class="dashboard-page sb-l-o">
+<body class="sb-l-o">
 	<!--/* 主题设置面板 */-->
 	<div th:replace="/fragments/skin-toolbox"></div>
 
@@ -25,23 +25,27 @@
 
 				<!-- Input Fields -->
 				<div class="panel">
-					<form id="fo_query" class="form-horizontal">
+					<form id="fo-query" class="form-horizontal">
 						<div class="panel-heading">
 							<span class="panel-title">查询条件</span>
 						</div>
 						<div class="panel-body">
 							<div class="form-group">
-								<label class="col-md-1 control-label">参数名称：</label>
+								<label class="col-md-1 control-label">枚举名称：</label>
 								<div class="col-md-2">
-									<input name="name" class="form-control" />
+									<input name="enum_name" class="form-control" />
 								</div>
-								<label class="col-md-1 control-label">参数键：</label>
+								<label class="col-md-1 control-label">枚举键：</label>
 								<div class="col-md-2">
-									<input name="param_key" class="form-control" />
+									<input name="enum_key" class="form-control" />
 								</div>
-								<label class="col-md-1 control-label">参数值</label>
+								<label class="col-md-1 control-label">是否启用</label>
 								<div class="col-md-2">
-									<input name="value" class="form-control" />
+									<select name="is_enable" class="basic-single form-control">
+										<option></option>
+										<option value="1">是</option>
+										<option value="0">否</option>
+									</select>
 								</div>
 								<label class="col-md-1 control-label">所属系统：</label>
 								<div class="col-md-2">
@@ -68,7 +72,7 @@
 					<div class="col-md-12">
 						<div class="panel panel-visible" id="spy1">
 							<div class="panel-heading">
-								<span class="panel-title">键值参数列表</span>
+								<span class="panel-title">枚举参数列表</span>
 								<div class="widget-menu pull-right mr5">
 									<div class="btn-group">
 										<button id="btn-new" class="btn btn-default btn-gradient btn-sm">
@@ -84,14 +88,16 @@
 								</div>
 							</div>
 							<div class="panel-body pn">
-								<table id="dt-param" class="table my table-striped table-hover ">
+								<table id="dt-enums" class="table my table-striped table-hover ">
 									<thead>
 										<tr>
 											<th>编号</th>
-											<th>参数名称</th>
-											<th>参数键</th>
-											<th>参数值</th>
+											<th>枚举键</th>
+											<th>枚举名称</th>
+											<th>元素键</th>
+											<th>元素值</th>
 											<th>所属系统</th>
+											<th>是否启用</th>
 											<th>更新时间</th>
 											<th class="text-center">操作</th>
 										</tr>
@@ -105,7 +111,7 @@
 				</div>
 
 				<!-- 新增参数窗口 -->
-				<div class="modal fade" id="w-add-param" tabindex="-1" data-backdrop="static">
+				<div class="modal fade" id="w-new" tabindex="-1" data-backdrop="static">
 					<div class="modal-dialog w450">
 						<div class="modal-content">
 							<div class="modal-header">
@@ -115,7 +121,7 @@
 								<h3 class="modal-title">新增键值参数</h3>
 							</div>
 							<div class="modal-body">
-								<form id="fo_add_param" class="form-horizontal">
+								<form id="fo-new" class="form-horizontal">
 									<div class="form-group">
 										<label class="col-md-3 control-label required">所属系统：</label>
 										<div class="col-md-9 field">
@@ -151,7 +157,7 @@
 								</form>
 							</div>
 							<div class="modal-footer">
-								<button type="submit" form="fo_add_param" class="btn btn-sm btn-success btn-gradient">保存</button>
+								<button type="submit" form="fo-new" class="btn btn-sm btn-success btn-gradient">保存</button>
 								<button type="button" class="btn btn-sm btn-danger btn-gradient" data-dismiss="modal">关闭</button>
 							</div>
 						</div>
@@ -185,11 +191,11 @@
 							"use strict";
 							Core.init();
 							/******* 事件监听.start ********/
-							$("#btn-query").on("click", queryParams);
-							$('#dt-param').on('init.dt', queryParams);
+							$("#btn-query").on("click", fnQuery);
+							$('#dt-enums').on('init.dt', fnQuery);
 							$("#btn-new").on("click", function(e) {
-								$('#w-add-param').modal();
-								$("#fo_add_param")[0].reset();
+								$('#w-new').modal();
+								$("#fo-new")[0].reset();
 							});
 							$("#btn-edit").on("click", function(e) {
 								My.notify('修改功能正在完善中...', 'info');
@@ -208,7 +214,7 @@
 							});
 
 							//初始化表格
-							$('#dt-param')
+							$('#dt-enums')
 									.dataTable(
 											{
 												dom : 'tr<"dt-panelfooter clearfix"lip>',
@@ -216,35 +222,43 @@
 												lengthMenu : [ [ 10, 20, 50, 200, 500 ], [ 10, 20, 50, 200, 500 ] ],
 												ordering : false,
 												processing : true,
-												serverSide : false, //false：一次查询，客户端分页的模式；true：服务端分页模式
+												serverSide : true, //false：一次查询，客户端分页的模式；true：服务端分页模式
 												deferLoading : 0, //屏蔽初始化后自动加载数据
 												pagingType : "full_numbers",
 												columns : [ {
 													data : "id",
 													width : 60
 												}, {
-													data : "name",
-													width : 200
-												}, {
-													data : "param_key",
+													data : "enum_key",
 													width : 150
 												}, {
-													data : "value"
+													data : "enum_name",
+													width : 200
+												},{
+													data : "element_key",
+													width : 150
+												},{
+													data : "element_value",
+													width : 400
 												}, {
 													data : "sys_key",
 													width : 200
 												}, {
+													data : "is_enable",
+													width : 100
+												},{
 													data : "update_time",
-													width : 150
+													width : 160
 												} ],
 												columnDefs : [ {
-													targets : [ 6 ],//动作列
+													targets : [ 8 ],//动作列
 													width : 50,
 													data : {},
 													render : function(row, type, full) {
-														var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='delParam("
-																+ JSON.stringify(row) + ")'>删除</button></div>";
-														return html;
+														var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
+															+ JSON.stringify(row) 
+															+ ")'>删除</button></div>";
+													    return html;
 													}
 												} ],
 											});
@@ -283,33 +297,33 @@
 								}
 							}
 
-							//绑定新增参数表单校验和提交响应时间
-							My.validate('#fo_add_param', saveParam, validateOptions);
+							//绑定新增表单校验和提交响应事件
+							My.validate('#fo-new', fnNew, validateOptions);
 
 						});
 
-		//查询参数列表
-		function queryParams() {
+		//查询列表
+		function fnQuery() {
 			var ajax = {
 				url : "list",
 				type : "POST",
-				data : My.params('#fo_query')
+				data : My.params('#fo-query')
 			}
-			$('#dt-param').DataTable().settings()[0].ajax = ajax;
-			$('#dt-param').DataTable().ajax.reload();
+			$('#dt-enums').DataTable().settings()[0].ajax = ajax;
+			$('#dt-enums').DataTable().ajax.reload();
 		}
 
-		//保存参数
-		function saveParam() {
+		//保存
+		function fnNew() {
 			$.ajax({
 				type : 'post',
 				url : 'save',
-				data : My.params('#fo_add_param'),
+				data : My.params('#fo-new'),
 				success : function(data) {
 					if (data.code == '1') {
 						My.notify(data.msg);
-						$('#w-add-param').modal('hide');
-						queryParams();
+						$('#w-new').modal('hide');
+						fnQuery();
 					} else {
 						My.notify(data.msg, 'danger');
 					}
@@ -317,9 +331,9 @@
 			});
 		}
 
-		//删除参数
-		function delParam(row) {
-			My.confirm('确认删除当前键值参数吗？', function(result) {
+		//删除
+		function fnDelete(row) {
+			My.confirm('确认删除当前枚举元素吗？', function(result) {
 				if (result) {
 					$.ajax({
 						type : 'post',
@@ -327,7 +341,7 @@
 						data : row,
 						success : function(data) {
 							My.notify(data.msg);
-							queryParams();
+							fnQuery();
 						}
 					});
 				}
