--- a/myclouds-admin-web/src/main/resources/static/css/myclouds.css
+++ b/myclouds-admin-web/src/main/resources/static/css/myclouds.css
@@ -43,3 +43,21 @@ table.my{
   vertical-align: middle;
 }
 /* end:控制Modal和Bootbox组件居中 */
+
+.menu-active{
+	background-color: #eeeeee;
+	box-shadow: 0 1px 0 #e5e5e5 inset, 0 -1px 0 #e5e5e5 inset;
+}
+
+/* table row selected */
+.selected {
+  background-color: #FBFBFB !important;
+}
+table.my > tbody > tr.selected > td:first-child{
+	border-left: 2px solid #3bafda;
+}
+
+#w-global-error div.modal-body{
+	background-color: #ff00000f;
+}
+
