--- a/myclouds-admin-web/src/main/resources/static/theme/assets/skin/default_skin/css/theme.css
+++ b/myclouds-admin-web/src/main/resources/static/theme/assets/skin/default_skin/css/theme.css
@@ -3670,7 +3670,8 @@ table.dataTable {
 }
 /* Table Row Changes */
 table.dataTable tr.odd {
-  background-color: #fff;
+  /* background-color: #FBFBFB; */
+  background-color: #FFF;
 }
 /* Table Header Changes */
 table.dataTable thead th {
@@ -9526,6 +9527,7 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
+  /* 可控制表格行高 */
   padding: 9px;
   line-height: 1.49;
   vertical-align: middle;
@@ -9583,7 +9585,7 @@ th {
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: #FBFBFB;
 }
 .table-curved > tbody > tr > td:first-child {
   border-radius: 4px 0 0 4px;
@@ -12027,7 +12029,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   display: inline;
   padding: .3em .7em .4em;
   font-size: 84%;
-  font-weight: 600;
+  /* font-weight: 600; updated by xc */
   line-height: 24px;
   color: #ffffff;
   text-align: center;
@@ -12659,9 +12661,9 @@ a.list-group-item:focus {
   margin-top: -3px;
 }
 .panel-heading .widget-menu .form-control {
-  margin-top: 6px;
-  font-size: 11px;
-  height: 27px;
+  margin-top: 3px;
+  font-size: 12px;
+  height: 30px;
   padding: 2px 10px;
   border-radius: 1px;
 }
@@ -16951,6 +16953,24 @@ on tables, feel free to add more*/
 .w450 {
   width: 450px !important;
 }
+.w500 {
+  width: 500px !important;
+}
+.w550 {
+  width: 550px !important;
+}
+.w600 {
+  width: 600px !important;
+}
+.w650 {
+  width: 650px !important;
+}
+.w700 {
+  width: 700px !important;
+}
+.w800 {
+  width: 800px !important;
+}
 .mnw20 {
   min-width: 20px !important;
 }
@@ -17373,7 +17393,6 @@ body.sidebar-collapsed #sidebar:before {
 .navbar .nav > li > a {
   color: #666;
   font-size: 13px;
-  font-weight: 600;
   padding-top: 20px;
   padding-bottom: 20px;
   height: 59px;
@@ -19771,7 +19790,10 @@ body.sb-l-m .sidebar-menu > li.active > a > span:nth-child(1) {
 }
 #sidebar_left.sidebar-light .sidebar-menu > li > ul > li > a:hover,
 #sidebar_left.sidebar-light .sidebar-menu > li > ul > li > a:focus {
-  background-color: transparent;
+  background-color: #EEEEEE;
+  /* color: #4a89dc; */
+  /* modified by xc*/
+  box-shadow: 0 1px 0 #e5e5e5 inset, 0 -1px 0 #e5e5e5 inset;
 }
 #sidebar_left.sidebar-light .sidebar-menu > li > ul > li.active > a > span:nth-child(1),
 #sidebar_left.sidebar-light .sidebar-menu > li > ul > li > a.menu-open > span:nth-child(1) {
