--- a/myclouds-admin-web/src/main/resources/templates/fragments/scripts.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/scripts.html
@@ -1,6 +1,5 @@
 <div th:fragment="script">
 	<!-- BEGIN: PAGE SCRIPTS -->
-	<script src="/theme/vendor/jquery/jquery-1.11.1.min.js"></script>
 	<script src="/theme/assets/js/utility/utility.js"></script>
 	<script src="/theme/assets/js/main.js"></script>
 	<script src="/theme/vendor/jquery/jquery_ui/jquery-ui.min.js"></script>
@@ -12,6 +11,10 @@
 	<script src="/theme/vendor/plugins/select2/select2.min.js"></script>
 	<script src="/theme/vendor/plugins/magnific/jquery.magnific-popup.js"></script>
 	<script src="/theme/vendor/plugins/pnotify/pnotify.js"></script>
+	<script src="/theme/vendor/plugins/moment/moment.min.js"></script>
+	<script src="/theme/vendor/plugins/datepicker/js/bootstrap-datetimepicker.js"></script>
+	<script src="/theme/vendor/plugins/daterange/daterangepicker.js"></script>
+	<script src="/js/md5.js"></script>
 	<script src="/js/myclouds.js"></script>
 	<!-- END: PAGE SCRIPTS -->
 </div>
