--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-<th:block th:replace="/fragments/head" />
+<th:block th:replace="fragments/head" />
 </head>
 
 <body class="sb-l-o">
 	<!--/* 主题设置面板 */-->
-	<div th:replace="/fragments/skin-toolbox"></div>
+	<div th:replace="fragments/skin-toolbox"></div>
 
 	<!-- BEGIN: 主页面 -->
 	<div id="main">
 		<!--/* 顶部导航 */-->
-		<header th:replace="/fragments/header-banner"></header>
+		<header th:replace="fragments/header-banner"></header>
 		<!--/* 左侧功能菜单导航 */-->
-		<aside th:replace="/fragments/aside"></aside>
+		<aside th:replace="fragments/aside"></aside>
 		<!-- BEGIN: Content-Wrapper -->
 		<section id="content_wrapper">
 			<!--/* 模块路径导航条 */-->
-			<header th:replace="/fragments/header-breadcrumb"></header>
+			<header th:replace="fragments/header-breadcrumb"></header>
 
 			<!-- Begin: 业务办理区 -->
 			<section id="content" class="animated fadeIn">
+				<input type="hidden" id="hi_enum_key" />
+				<input type="hidden" id="hi_enum_name" />
 
 				<!-- Input Fields -->
 				<div class="panel">
@@ -47,11 +49,11 @@
 										<option value="0">否</option>
 									</select>
 								</div>
-								<label class="col-md-1 control-label">所属系统：</label>
+								<label class="col-md-1 control-label">所属分类：</label>
 								<div class="col-md-2">
-									<select name="sys_key" class="basic-single form-control">
+									<select name="type" class="basic-single form-control">
 										<option></option>
-										<option value="0">缺省全局</option>
+										<option value="1">缺省</option>
 									</select>
 								</div>
 							</div>
@@ -72,23 +74,23 @@
 					<div class="col-md-12">
 						<div class="panel panel-visible" id="spy1">
 							<div class="panel-heading">
-								<span class="panel-title">枚举参数列表</span>
+								<span class="panel-title pr5">枚举元素列表</span><span class="label label-xs label-info p2"><small>提示：行双击过滤</small></span>
 								<div class="widget-menu pull-right mr5">
 									<div class="btn-group">
 										<button id="btn-new" class="btn btn-default btn-gradient btn-sm">
 											<span class="fa fa-plus mr3"></span>新增
 										</button>
-										<button id="btn-edit" class="btn btn-default btn-gradient btn-sm">
-											<span class="fa fa-pencil mr3"></span>修改
+										<button id="btn-sync" class="btn btn-default btn-gradient btn-sm">
+											<span class="fa fa-exchange mr3"></span>同步缓存
 										</button>
-										<button id="btn-del" class="btn btn-default btn-gradient btn-sm">
-											<span class="fa fa-times mr3"></span>删除
+										<button id="btn-refresh" class="btn btn-default btn-gradient btn-sm">
+											<span class="fa fa-refresh mr3"></span>刷新
 										</button>
 									</div>
 								</div>
 							</div>
 							<div class="panel-body pn">
-								<table id="dt-enums" class="table my table-striped table-hover ">
+								<table id="dt-enums" class="table my table-hover">
 									<thead>
 										<tr>
 											<th>编号</th>
@@ -96,9 +98,9 @@
 											<th>枚举名称</th>
 											<th>元素键</th>
 											<th>元素值</th>
-											<th>所属系统</th>
+											<th>排序号</th>
 											<th>是否启用</th>
-											<th>更新时间</th>
+											<th>所属分类</th>
 											<th class="text-center">操作</th>
 										</tr>
 									</thead>
@@ -110,47 +112,68 @@
 					</div>
 				</div>
 
-				<!-- 新增参数窗口 -->
+				<!-- 新增窗口 -->
 				<div class="modal fade" id="w-new" tabindex="-1" data-backdrop="static">
-					<div class="modal-dialog w450">
+					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
-								<h3 class="modal-title">新增键值参数</h3>
+								<h3 class="modal-title">新增枚举元素</h3>
 							</div>
 							<div class="modal-body">
 								<form id="fo-new" class="form-horizontal">
 									<div class="form-group">
-										<label class="col-md-3 control-label required">所属系统：</label>
-										<div class="col-md-9 field">
-											<select name="sys_key" class="basic-single form-control" style="width: 250px">
-												<option value="0">缺省全局</option>
+										<label class="col-md-2 control-label required">所属分类：</label>
+										<div class="col-md-10 field">
+											<select name="type" class="basic-single form-control">
+												<option value="0">缺省</option>
 											</select>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-md-3 control-label required">参数名称：</label>
-										<div class="col-md-9 field">
-											<input type="text" name="name" class="form-control" />
+										<label class="col-md-2 control-label required">是否启用：</label>
+										<div class="col-md-10 field">
+											<select name="type" class="basic-single form-control">
+												<option value="1">是</option>
+												<option value="0">否</option>
+											</select>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-md-3 control-label required">参数键：</label>
-										<div class="col-md-9 field">
-											<input class="form-control" type="text" name="param_key" />
+										<label class="col-md-2 control-label required">枚举键：</label>
+										<div class="col-md-10 field">
+											<input class="form-control" type="text" name="enum_key" />
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-md-3 control-label required">参数值：</label>
-										<div class="col-md-9 field">
-											<input name="value" class="form-control" type="text" />
+										<label class="col-md-2 control-label required">枚举名称：</label>
+										<div class="col-md-10 field">
+											<input type="text" name="enum_name" class="form-control" />
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-md-3 control-label">备注</label>
-										<div class="col-md-9 field">
+										<label class="col-md-2 control-label required">元素键：</label>
+										<div class="col-md-10 field">
+											<input name="element_key" class="form-control" type="text" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-2 control-label required">元素值：</label>
+										<div class="col-md-10 field">
+											<input name="element_value" class="form-control" type="text" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-2 control-label">排序号：</label>
+										<div class="col-md-10 field">
+											<input name="sort_no" class="form-control" type="text" value="1" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-2 control-label">备注：</label>
+										<div class="col-md-10 field">
 											<textarea name="remark" class="form-control textarea-grow" rows="4"></textarea>
 										</div>
 									</div>
@@ -172,7 +195,7 @@
 			<!-- End: 业务办理区 -->
 
 			<!--/* 页脚 */-->
-			<footer th:replace="/fragments/footer"></footer>
+			<footer th:replace="fragments/footer"></footer>
 
 		</section>
 		<!-- End: Content-Wrapper -->
@@ -181,133 +204,186 @@
 	<!-- End: 主页面 -->
 
 	<!--/* 公共脚本文件 */-->
-	<th:block th:include="/fragments/scripts" />
+	<th:block th:include="fragments/scripts" />
 
 	<script th:inline="javascript">
 		/*<![CDATA[*/
-		jQuery(document)
-				.ready(
-						function() {
-							"use strict";
-							Core.init();
-							/******* 事件监听.start ********/
-							$("#btn-query").on("click", fnQuery);
-							$('#dt-enums').on('init.dt', fnQuery);
-							$("#btn-new").on("click", function(e) {
-								$('#w-new').modal();
-								$("#fo-new")[0].reset();
+		$(function() {
+			"use strict";
+			Core.init();
+			My.init();
+			/******* 事件监听.start ********/
+			$("#btn-query").on("click", function() {
+				$('#hi_enum_key').val('');
+				fnQuery();
+			});
+			$("#btn-new").on("click", function(e) {
+				$('#w-new').modal();
+				$("#fo-new")[0].reset();
+				$("#fo-new [name='enum_key']").val($('#hi_enum_key').val());
+				$("#fo-new [name='enum_name']").val($('#hi_enum_name').val());
+			});
+			$("#btn-refresh").on("click", fnQuery);
+			$("#btn-sync").on("click", syncCache);
+			$('#dt-enums').on('init.dt', fnQuery);
+			$('#dt-enums tbody').on('dblclick', 'tr', function() {
+				var table = $('#dt-enums').DataTable();
+				var row = table.row(this).data();
+				if ($('#hi_enum_key').val()) {
+					$('#hi_enum_key').val('');
+					$('#hi_enum_name').val('');
+				} else {
+					$('#hi_enum_key').val(row.enum_key);
+					$('#hi_enum_name').val(row.enum_name);
+				}
+				fnQuery();
+			});
+			$('#dt-enums tbody').on('click', 'tr', function() {
+				$(this).toggleClass('selected');
+			});
+
+			/******* 事件监听.end ********/
+
+			//初始化下拉框
+			$(".basic-single").select2({
+				placeholder : "请选择...",
+				width : '100%',
+				minimumResultsForSearch : -1, //隐藏搜索框
+				allowClear : true
+			});
+
+			//初始化表格
+			$('#dt-enums')
+					.dataTable(
+							{
+								dom : 'tr<"dt-panelfooter clearfix"lip>',
+								pageLength : 20,
+								lengthMenu : [ [ 10, 20, 50, 200, 500 ], [ 10, 20, 50, 200, 500 ] ],
+								ordering : false,
+								processing : true,
+								serverSide : true, //false：一次查询，客户端分页的模式；true：服务端分页模式
+								deferLoading : 0, //屏蔽初始化后自动加载数据
+								pagingType : "full_numbers",
+								columns : [ {
+									data : "id",
+									width : 60
+								}, {
+									data : "enum_key",
+									width : 150
+								}, {
+									data : "enum_name",
+									width : 200
+								}, {
+									data : "element_key",
+									width : 150
+								}, {
+									data : "element_value",
+									width : 400
+								}, {
+									data : "sort_no",
+									width : 60
+								}, {
+									data : "is_enable",
+									render : function(data, type, row, meta) {
+										switch (row.is_enable) {
+										case '0':
+											return '否';
+										case '1':
+											return '是';
+										default:
+											return row.type
+										}
+									},
+									width : 100
+								}, {
+									data : "type",
+									render : function(data, type, row, meta) {
+										switch (row.type) {
+										case '1':
+											return '缺省';
+										default:
+											return row.type
+										}
+									},
+									width : 100
+								} ],
+								columnDefs : [
+										{
+											targets : 8,//动作列
+											width : 50,
+											render : function(data, type, row, meta) {
+												var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
+														+ JSON.stringify(row) + ")'>删除</button></div>";
+												return html;
+											}
+										}, {
+											"defaultContent" : "",
+											"targets" : "_all"
+										} ],
 							});
-							$("#btn-edit").on("click", function(e) {
-								My.notify('修改功能正在完善中...', 'info');
-							});
-							$("#btn-del").on("click", function(e) {
-								My.notify('批量删除功能正在完善中...', 'info');
-							});
-							/******* 事件监听.end ********/
 
-							//初始化下拉框
-							$(".basic-single").select2({
-								placeholder : "请选择...",
-								width : '100%',
-								minimumResultsForSearch : -1, //隐藏搜索框
-								allowClear : true
-							});
+			//表单校验规则
+			var validateOptions = {
+				//校验规则
+				rules : {
+					enum_name : {
+						required : true
+					},
+					enum_key : {
+						required : true
+					},
+					type : {
+						required : true
+					},
+					element_key : {
+						required : true
+					},
+					element_value : {
+						required : true
+					},
+					is_enable : {
+						required : true
+					}
+				},
+				//提示信息
+				messages : {
+					enum_name : {
+						required : '请输入枚举类型名称'
+					},
+					enum_key : {
+						required : '请输入枚举键'
+					},
+					type : {
+						required : '请选择所属分类'
+					},
+					element_key : {
+						required : '请输入元素键'
+					},
+					element_value : {
+						required : '请输入元素值'
+					},
+					is_enable : {
+						required : '请选择是否启用标志'
+					}
+				}
+			}
 
-							//初始化表格
-							$('#dt-enums')
-									.dataTable(
-											{
-												dom : 'tr<"dt-panelfooter clearfix"lip>',
-												pageLength : 20,
-												lengthMenu : [ [ 10, 20, 50, 200, 500 ], [ 10, 20, 50, 200, 500 ] ],
-												ordering : false,
-												processing : true,
-												serverSide : true, //false：一次查询，客户端分页的模式；true：服务端分页模式
-												deferLoading : 0, //屏蔽初始化后自动加载数据
-												pagingType : "full_numbers",
-												columns : [ {
-													data : "id",
-													width : 60
-												}, {
-													data : "enum_key",
-													width : 150
-												}, {
-													data : "enum_name",
-													width : 200
-												},{
-													data : "element_key",
-													width : 150
-												},{
-													data : "element_value",
-													width : 400
-												}, {
-													data : "sys_key",
-													width : 200
-												}, {
-													data : "is_enable",
-													width : 100
-												},{
-													data : "update_time",
-													width : 160
-												} ],
-												columnDefs : [ {
-													targets : [ 8 ],//动作列
-													width : 50,
-													data : {},
-													render : function(row, type, full) {
-														var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
-															+ JSON.stringify(row) 
-															+ ")'>删除</button></div>";
-													    return html;
-													}
-												} ],
-											});
+			//绑定新增表单校验和提交响应事件
+			My.validate('#fo-new', fnNew, validateOptions);
 
-							//表单校验规则
-							var validateOptions = {
-								//校验规则
-								rules : {
-									name : {
-										required : true
-									},
-									param_key : {
-										required : true
-									},
-									sys_key : {
-										required : true
-									},
-									value : {
-										required : true
-									}
-								},
-								//提示信息
-								messages : {
-									name : {
-										required : '请输入参数名称'
-									},
-									param_key : {
-										required : '请输入参数键'
-									},
-									sys_key : {
-										required : '请选择所属系统'
-									},
-									value : {
-										required : '请输入参数值'
-									}
-								}
-							}
-
-							//绑定新增表单校验和提交响应事件
-							My.validate('#fo-new', fnNew, validateOptions);
-
-						});
+		});
 
 		//查询列表
 		function fnQuery() {
+			var param = My.params('#fo-query');
+			var enum_key = $('#hi_enum_key').val();
+			if (enum_key) {
+				param.enum_key = enum_key;
+			}
 			var ajax = {
 				url : "list",
 				type : "POST",
-				data : My.params('#fo-query')
+				data : param
 			}
 			$('#dt-enums').DataTable().settings()[0].ajax = ajax;
 			$('#dt-enums').DataTable().ajax.reload();
@@ -315,14 +391,17 @@
 
 		//保存
 		function fnNew() {
+			var param = My.params('#fo-new');
 			$.ajax({
 				type : 'post',
 				url : 'save',
-				data : My.params('#fo-new'),
+				data : param,
 				success : function(data) {
 					if (data.code == '1') {
 						My.notify(data.msg);
 						$('#w-new').modal('hide');
+						$('#hi_enum_key').val(param.enum_key);
+						$('#hi_enum_name').val(param.enum_name);
 						fnQuery();
 					} else {
 						My.notify(data.msg, 'danger');
@@ -346,6 +425,31 @@
 					});
 				}
 			});
+		}
+
+		//缓存同步
+		function syncCache() {
+			My
+					.confirm(
+							'<span class="text-danger">请知晓当前操作的必要性和重要性再继续。确认批量同步缓存吗？</span><hr class="mv10 br-lighter"><span class="label label-xs label-info p2"><i class="fa fa-meh-o"></i> 提示</span> 页面上的维护操作，数据已自动同步缓存。',
+							function(result) {
+								if (result) {
+									$.ajax({
+										type : 'post',
+										data : {
+											type : 'enum'
+										},
+										url : '/sys/cache/syncCfgCache',
+										success : function(data) {
+											if (data.code == '1') {
+												My.notify(data.msg);
+											} else {
+												My.notify(data.msg, 'danger');
+											}
+										}
+									});
+								}
+							});
 		}
 
 		/*]]>*/
