--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/role.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/role.html
@@ -3,10 +3,11 @@
 
 <head>
 <th:block th:replace="fragments/head" />
+<link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/ztree/css/zTreeStyle.css" />
 </head>
 
 <body class="sb-l-o">
-	<!--/* 主题设置面板 */-->
+	<!--/* 主题设置面板  */-->
 	<div th:replace="fragments/skin-toolbox"></div>
 
 	<!-- BEGIN: 主页面 -->
@@ -31,23 +32,22 @@
 						</div>
 						<div class="panel-body">
 							<div class="form-group">
-								<label class="col-md-1 control-label">参数名称：</label>
-								<div class="col-md-2">
+								<label class="col-md-1 control-label">角色名称：</label>
+								<div class="col-md-3">
 									<input name="name" class="form-control" />
 								</div>
-								<label class="col-md-1 control-label">参数键：</label>
-								<div class="col-md-2">
-									<input name="param_key" class="form-control" />
-								</div>
-								<label class="col-md-1 control-label">参数值</label>
-								<div class="col-md-2">
-									<input name="value" class="form-control" />
-								</div>
-								<label class="col-md-1 control-label">所属分类：</label>
-								<div class="col-md-2">
+								<label class="col-md-1 control-label">角色类型：</label>
+								<div class="col-md-3">
 									<select name="type" class="basic-single form-control">
 										<option></option>
-										<option value="0">缺省全局</option>
+										<option value="1">缺省</option>
+									</select>
+								</div>
+								<label class="col-md-1 control-label">是否启用：</label>
+								<div class="col-md-3">
+									<select name="is_enable" class="basic-single form-control">
+										<option value="1">是</option>
+										<option value="0">否</option>
 									</select>
 								</div>
 							</div>
@@ -66,16 +66,13 @@
 
 				<div class="row">
 					<div class="col-md-12">
-						<div class="panel panel-visible" id="spy1">
+						<div class="panel panel-visible">
 							<div class="panel-heading">
-								<span class="panel-title">键值参数列表</span>
+								<span class="panel-title">角色列表</span>
 								<div class="widget-menu pull-right mr5">
 									<div class="btn-group">
 										<button id="btn-new" class="btn btn-default btn-gradient btn-sm">
 											<span class="fa fa-plus mr3"></span>新增
-										</button>
-										<button id="btn-sync" class="btn btn-default btn-gradient btn-sm">
-											<span class="fa fa-exchange mr3"></span>同步缓存
 										</button>
 										<button id="btn-refresh" class="btn btn-default btn-gradient btn-sm">
 											<span class="fa fa-refresh mr3"></span>刷新
@@ -84,14 +81,16 @@
 								</div>
 							</div>
 							<div class="panel-body pn">
-								<table id="dt-param" class="table my table-hover ">
+								<table id="dt-role" class="table my table-hover">
 									<thead>
 										<tr>
 											<th>编号</th>
-											<th>参数名称</th>
-											<th>参数键</th>
-											<th>参数值</th>
-											<th>所属分类</th>
+											<th>角色名称</th>
+											<th>角色类型</th>
+											<th>是否启用</th>
+											<th>创建人</th>
+											<th>创建时间</th>
+											<th class="text-center">授权</th>
 											<th class="text-center">操作</th>
 										</tr>
 									</thead>
@@ -103,7 +102,7 @@
 					</div>
 				</div>
 
-				<!-- 新增参数窗口 -->
+				<!-- 新增角色窗口 -->
 				<div class="modal fade" id="w-new" tabindex="-1" data-backdrop="static">
 					<div class="modal-dialog w450">
 						<div class="modal-content">
@@ -111,34 +110,37 @@
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
-								<h3 class="modal-title">新增键值参数</h3>
+								<h3 class="modal-title">新增角色</h3>
 							</div>
 							<div class="modal-body">
 								<form id="fo-new" class="form-horizontal">
 									<div class="form-group">
-										<label class="col-md-3 control-label required">所属分类：</label>
+										<label class="col-md-3 control-label required">角色类型：</label>
 										<div class="col-md-9 field">
 											<select name="type" class="basic-single form-control">
-												<option value="0">缺省</option>
+												<option value="1">缺省</option>
 											</select>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-md-3 control-label required">参数名称：</label>
+										<label class="col-md-3 control-label required">角色名称：</label>
 										<div class="col-md-9 field">
 											<input type="text" name="name" class="form-control" />
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-md-3 control-label required">参数键：</label>
+										<label class="col-md-3 control-label required">是否启用：</label>
 										<div class="col-md-9 field">
-											<input class="form-control" type="text" name="param_key" />
+											<select name="is_enable" class="basic-single form-control">
+												<option value="1" selected="selected">是</option>
+												<option value="0">否</option>
+											</select>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-md-3 control-label required">参数值：</label>
+										<label class="col-md-3 control-label">扩展JSON</label>
 										<div class="col-md-9 field">
-											<input name="value" class="form-control" type="text" />
+											<textarea name="ext" class="form-control textarea-grow" rows="4"></textarea>
 										</div>
 									</div>
 									<div class="form-group">
@@ -160,13 +162,39 @@
 				</div>
 				<!-- /.modal -->
 
+				<!-- 授权窗口 -->
+				<div class="modal fade" id="w-grant" tabindex="-1" data-backdrop="static">
+					<div class="modal-dialog w500">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+								<h3 class="modal-title">角色授权</h3>
+							</div>
+							<div class="modal-body">
+								<form id="fo-grant">
+									<input type="hidden" name="role_id" />
+									<ul id="tree-grant" class="ztree"></ul>
+								</form>
+							</div>
+							<div class="modal-footer">
+								<button type="button" id="btn-select" class="btn btn-sm btn-info btn-gradient pull-left">全选/反选</button>
+								<button type="button" id="btn-grant" class="btn btn-sm btn-success btn-gradient">保存</button>
+								<button type="button" class="btn btn-sm btn-danger btn-gradient" data-dismiss="modal">关闭</button>
+							</div>
+						</div>
+						<!-- /.modal-content -->
+					</div>
+					<!-- /.modal-dialog -->
+				</div>
+				<!-- /.modal -->
 
 			</section>
 			<!-- End: 业务办理区 -->
 
 			<!--/* 页脚 */-->
 			<footer th:replace="fragments/footer"></footer>
-
 		</section>
 		<!-- End: Content-Wrapper -->
 
@@ -175,6 +203,7 @@
 
 	<!--/* 公共脚本文件 */-->
 	<th:block th:include="fragments/scripts" />
+	<script src="/theme/vendor/plugins/ztree/js/jquery.ztree.all.min.js"></script>
 
 	<script th:inline="javascript">
 		/*<![CDATA[*/
@@ -184,14 +213,15 @@
 			My.init();
 			/******* 事件监听.start ********/
 			$("#btn-query").on("click", fnQuery);
-			$('#dt-param').on('init.dt', fnQuery);
-			$("#btn-sync").on("click", syncCache);
+			$('#dt-role').on('init.dt', fnQuery);
 			$("#btn-new").on("click", function(e) {
 				$('#w-new').modal();
 				$("#fo-new")[0].reset();
 			});
 			$("#btn-refresh").on("click", fnQuery);
-			$('#dt-param tbody').on('click', 'tr', function() {
+			$("#btn-grant").on("click", fnGrant);
+			$("#btn-select").on("click", fnSelect);
+			$('#dt-role tbody').on('click', 'tr', function() {
 				$(this).toggleClass('selected');
 			});
 			/******* 事件监听.end ********/
@@ -205,7 +235,7 @@
 			});
 
 			//初始化表格
-			$('#dt-param')
+			$('#dt-role')
 					.dataTable(
 							{
 								dom : 'tr<"dt-panelfooter clearfix"lip>',
@@ -220,29 +250,51 @@
 									data : "id",
 									width : 60
 								}, {
-									data : "name",
-									width : 200
-								}, {
-									data : "param_key",
-									width : 150
-								}, {
-									data : "value"
+									data : "name"
 								}, {
 									data : "type",
 									render : function(data, type, row, meta) {
 										switch (row.type) {
-										case '0':
+										case '1':
 											return '缺省';
 										default:
 											return row.type
 										}
-									},
+									},										
+									width : 200
+								}, {
+									data : "is_enable",
+									render : function(data, type, row, meta) {
+										switch (row.is_enable) {
+										case '1':
+											return '是';
+										case '0':
+											return '否';
+										default:
+											return row.status
+										}
+									},									
+									width : 100
+								}, {
+									data : "create_by",
+									width : 100
+								}, {
+									data : "create_time",
 									width : 200
 								} ],
 								columnDefs : [
 										{
-											targets : 5,//动作列
-											width : 50,
+											targets : 6,//动作列
+											width : 30,
+											render : function(data, type, row, meta) {
+												var html = "<div class='text-center'><button class='btn btn-success btn-xs btn-gradient' onclick='fnOpenGrant("
+														+ JSON.stringify(row) + ")'>授权</button></div>";
+												return html;
+											}
+										},
+										{
+											targets : 7,//动作列
+											width : 30,
 											render : function(data, type, row, meta) {
 												var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
 														+ JSON.stringify(row) + ")'>删除</button></div>";
@@ -261,29 +313,23 @@
 					name : {
 						required : true
 					},
-					param_key : {
+					is_enable : {
 						required : true
 					},
 					type : {
-						required : true
-					},
-					value : {
 						required : true
 					}
 				},
 				//提示信息
 				messages : {
 					name : {
-						required : '请输入参数名称'
+						required : '请输入角色名称'
 					},
-					param_key : {
-						required : '请输入参数键'
+					is_enable : {
+						required : '请选择是否启用'
 					},
 					type : {
-						required : '请选择所属分类'
-					},
-					value : {
-						required : '请输入参数值'
+						required : '请选择角色类型'
 					}
 				}
 			}
@@ -300,8 +346,8 @@
 				type : "POST",
 				data : My.params('#fo_query')
 			}
-			$('#dt-param').DataTable().settings()[0].ajax = ajax;
-			$('#dt-param').DataTable().ajax.reload();
+			$('#dt-role').DataTable().settings()[0].ajax = ajax;
+			$('#dt-role').DataTable().ajax.reload();
 		}
 
 		//保存
@@ -324,7 +370,7 @@
 
 		//删除
 		function fnDelete(row) {
-			My.confirm('确认删除当前键值参数吗？', function(result) {
+			My.confirm('确认删除当前角色吗？', function(result) {
 				if (result) {
 					$.ajax({
 						type : 'post',
@@ -339,29 +385,75 @@
 			});
 		}
 
-		//缓存同步
-		function syncCache() {
-			My
-					.confirm(
-							'<span class="text-danger">请知晓当前操作的必要性和重要性再继续。确认批量同步缓存吗？</span><hr class="mv10 br-lighter"><span class="label label-xs label-info p2"><i class="fa fa-meh-o"></i> 提示</span> 页面上的维护操作，数据已自动同步缓存。',
-							function(result) {
-								if (result) {
-									$.ajax({
-										type : 'post',
-										data : {
-											type : 'kv'
-										},
-										url : '/sys/cache/syncCfgCache',
-										success : function(data) {
-											if (data.code == '1') {
-												My.notify(data.msg);
-											} else {
-												My.notify(data.msg, 'danger');
-											}
-										}
-									});
-								}
-							});
+		//打开授权窗口
+		function fnOpenGrant(row) {
+			$("#fo-grant")[0].reset();
+			$("#fo-grant [name='role_id']").val(row.id);
+			var setting = {
+				view : {
+					showLine : false
+				},
+				check : {
+					enable : true
+				},
+				data : {
+					simpleData : {
+						enable : true
+					}
+				}
+			};
+			$.ajax({
+				type : 'post',
+				url : 'listGrantTree',
+				data : My.params('#fo-grant'),
+				success : function(data) {
+					var tree = $.fn.zTree.init($("#tree-grant"), setting, data);
+					tree.expandAll(true);
+					$('#w-grant').modal();
+				}
+			});
+		}
+
+		//授权
+		function fnGrant() {
+			My.confirm('确认对当前角色进行授权操作吗？', function(result) {
+				if (result) {
+					var treeObj = $.fn.zTree.getZTreeObj("tree-grant");
+					var nodes = treeObj.getCheckedNodes();
+					var data = {
+						role_id : $("#fo-grant [name='role_id']").val(),
+					}
+					var moduleIds = new Array();
+					$.each(nodes, function(index, node) {
+						moduleIds.push(node.id);
+					});
+					data.moduleIds = moduleIds.join(',');
+					$.ajax({
+						type : 'post',
+						url : 'grant',
+						data : data,
+						success : function(data) {
+							if (data.code == '1') {
+								My.notify(data.msg);
+								$('#w-grant').modal('hide');
+							} else {
+								My.notify(data.msg, 'danger');
+							}
+						}
+					});
+				}
+			});
+		}
+
+		//全选反选
+		function fnSelect() {
+			var treeObj = $.fn.zTree.getZTreeObj("tree-grant");
+			if (treeObj.getCheckedNodes().length > 0) {
+				treeObj.checkAllNodes(false);
+			} else {
+				treeObj.checkAllNodes(true);
+			}
+
 		}
 
 		/*]]>*/
