no commit message

--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/module.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/module.html
@@ -24,7 +24,7 @@
 			<section id="content" class="table-layout animated fadeIn">
 
 				<div>
-					<span class="glyphicons glyphicons-bell"></span> 一期功能裁剪。请将菜单数据直接填入sys_module表。
+					<span class="glyphicons glyphicons-bell"></span> 请将菜单数据直接维护到sys_module表。
 				</div>
 
 			</section>
