no commit message

--- a/myclouds-admin-web/src/main/resources/templates/fragments/head.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/head.html
@@ -1,4 +1,4 @@
-<title>中赢卓投管理系统</title>
+<title>MyClouds：轻量级微服务治理及快速开发平台</title>
 <meta charset="utf-8" />
 <meta name="keywords" content="MyClouds" />
 <meta name="author" content="xiongchun" />
